telemedicine/telemedicinebff/istio/mtls.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: telemedicinebff-mtls
  namespace: telemedicinebff
spec:
  mtls:
    mode: STRICT
