telemedicine/telemedicinebff/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: telemedicinebff
  namespace: telemedicinebff
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "127.0.0.1.tm.sslip.io"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: telemedicinebff-certs
