telemedicine/telemedicinebff/istio/destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: telemedicinebff
  namespace: telemedicinebff
spec:
  host: telemedicinebff
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
