telemedicine/telemedicinebff/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: telemedicinebff
  namespace: telemedicinebff
spec:
  hosts:
  - "127.0.0.1.tm.sslip.io"
  gateways:
  - telemedicinebff
  http:
  - match:
    - uri:
        prefix: /combined_data
    route:
    - destination:
        host: telemedicinebff
        port:
          number: 5000
